--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<header>
+		<!-- Barra Menú -->
 		<ul class="barra-menu">
 			<img class="barra-menu__perfil" src="img/perfil.png" alt="">
 			<li class="barra-menu__lista">
@@ -41,6 +42,7 @@
 				<a href="#" class="box__text--btn"><i class="fa fa-paper-plane" aria-hidden="true"></i>  HIRE ME</a>
 			</div>
 		</div>
+		<!-- links redes sociales -->
 		<div class="box box__redes">
 			<img src="img/facebook.png" alt="facebook" class="box__redes--lista">
 			<img src="img/twitter.png" alt="twitter" class="box__redes--lista">
