agrego sección en html y estilos

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
 			<img src="img/dribbble.png" alt="dribbble" class="box__redes--lista">
 		</div>
 	</section>
+	
+	<!-- segunda sección -->
+	<section class="proyect">
+		<div class="caja">
+			<div class="caja__circulo caja__circulo--blanco">
+				<h1 class="caja__circulo--proyectos">Proyects</h1>
+			</div>
+		</div>
+	</section>
 
 	
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
